--- a/.env
+++ b/.env
@@ -3,3 +3,9 @@ MYSQL_HOST=127.0.0.1
 MYSQL_DATABASE=gng
 MYSQL_ROOT_USER=root
 MYSQL_ROOT_PASSWORD=root
+
+GNG_PORT=3306
+GNG_HOST=127.0.0.1
+GNG_DATABASE=gng
+GNG_ROOT_USER=root
+GNG_ROOT_PASSWORD=root
