--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 MYSQL_PORT=3306
 MYSQL_HOST=127.0.0.1
-MYSQL_DATABASE=gng
+MYSQL_DATABASE=migration_db
 MYSQL_ROOT_USER=root
 MYSQL_ROOT_PASSWORD=root
 
