--- a/.env
+++ b/.env
@@ -2,10 +2,10 @@ MYSQL_PORT=3306
 MYSQL_HOST=127.0.0.1
 MYSQL_DATABASE=migration_db
 MYSQL_ROOT_USER=root
-MYSQL_ROOT_PASSWORD=root
+MYSQL_ROOT_PASSWORD=rifat1234
 
 GNG_PORT=3306
 GNG_HOST=127.0.0.1
-GNG_DATABASE=gng
+GNG_DATABASE=bbt_old
 GNG_ROOT_USER=root
-GNG_ROOT_PASSWORD=root
+GNG_ROOT_PASSWORD=rifat1234
