--- a/package.json
+++ b/package.json
@@ -23,12 +23,13 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/schedule": "^4.0.0",
     "axios": "^1.5.0",
     "dotenv": "^16.3.1",
     "he": "^1.2.0",
     "knex": "^2.5.1",
-    "mysql": "^2.18.1",
     "nest-knexjs": "^0.0.17",
+    "mysql": "^2.18.1",
     "objection": "^3.0.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
