warehouse_skus_stock implemented

--- a/.env
+++ b/.env
@@ -4,6 +4,12 @@ MYSQL_DATABASE=migration_db
 MYSQL_ROOT_USER=root
 MYSQL_ROOT_PASSWORD=rifat1234
 
+# MYSQL_PORT=3306
+# MYSQL_HOST=gng-db.cb7ryzdh8yml.ap-southeast-1.rds.amazonaws.com
+# MYSQL_DATABASE=gng_live_v4
+# MYSQL_ROOT_USER=gng_db_admin
+# MYSQL_ROOT_PASSWORD=GnG!bbT^3947!29
+
 GNG_PORT=3306
 GNG_HOST=127.0.0.1
 GNG_DATABASE=bbt_old
