--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 MYSQL_PORT=3306
-MYSQL_HOST=127.0.0.1
-MYSQL_DATABASE=migration_db
-MYSQL_ROOT_USER=root
-MYSQL_ROOT_PASSWORD=rifat1234
+MYSQL_HOST=gng-db.cb7ryzdh8yml.ap-southeast-1.rds.amazonaws.com
+MYSQL_DATABASE=gng_live_v11
+MYSQL_ROOT_USER=gng_db_admin
+MYSQL_ROOT_PASSWORD=GnG!bbT^3947!29
 
 # MYSQL_PORT=3306
 # MYSQL_HOST=gng-db.cb7ryzdh8yml.ap-southeast-1.rds.amazonaws.com
@@ -15,3 +15,5 @@ GNG_HOST=127.0.0.1
 GNG_DATABASE=bbt_old
 GNG_ROOT_USER=root
 GNG_ROOT_PASSWORD=rifat1234
+
+MONGODB_URL=mongodb://localhost:27017/gng
