--- a/package.json
+++ b/package.json
@@ -22,14 +22,19 @@
   "dependencies": {
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/mapped-types": "^2.0.4",
+    "@nestjs/mongoose": "^10.0.2",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/schedule": "^4.0.0",
     "axios": "^1.5.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
     "dotenv": "^16.3.1",
     "he": "^1.2.0",
     "knex": "^2.5.1",
-    "nest-knexjs": "^0.0.17",
+    "mongoose": "^8.1.1",
     "mysql": "^2.18.1",
+    "nest-knexjs": "^0.0.17",
     "objection": "^3.0.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
