--- a/.env
+++ b/.env
@@ -1,3 +1,9 @@
+# MYSQL_PORT=3306
+# MYSQL_HOST=127.0.0.1
+# MYSQL_DATABASE=migration_db
+# MYSQL_ROOT_USER=root
+# MYSQL_ROOT_PASSWORD=rifat1234
+
 MYSQL_PORT=3306
 MYSQL_HOST=gng-db.cb7ryzdh8yml.ap-southeast-1.rds.amazonaws.com
 MYSQL_DATABASE=gng_live_v11
