--- a/.env
+++ b/.env
@@ -1,14 +1,14 @@
-# MYSQL_PORT=3306
-# MYSQL_HOST=127.0.0.1
-# MYSQL_DATABASE=migration_db
-# MYSQL_ROOT_USER=root
-# MYSQL_ROOT_PASSWORD=rifat1234
-
 MYSQL_PORT=3306
-MYSQL_HOST=gng-db.cb7ryzdh8yml.ap-southeast-1.rds.amazonaws.com
-MYSQL_DATABASE=gng_live_v11
-MYSQL_ROOT_USER=gng_db_admin
-MYSQL_ROOT_PASSWORD=GnG!bbT^3947!29
+MYSQL_HOST=127.0.0.1
+MYSQL_DATABASE=migration_db
+MYSQL_ROOT_USER=root
+MYSQL_ROOT_PASSWORD=rifat1234
+
+# MYSQL_PORT=3306
+# MYSQL_HOST=gng-db.cb7ryzdh8yml.ap-southeast-1.rds.amazonaws.com
+# MYSQL_DATABASE=gng_live_v11
+# MYSQL_ROOT_USER=gng_db_admin
+# MYSQL_ROOT_PASSWORD=GnG!bbT^3947!29
 
 # MYSQL_PORT=3306
 # MYSQL_HOST=gng-db.cb7ryzdh8yml.ap-southeast-1.rds.amazonaws.com
